# react-fastapi

./: .gitignore  CLAUDE.md  README.md  biome.json  build.sh  makefile  skills-lock.json
.agents/prompts/: select_review.prompt.md
.agents/skills/code-reviewer/: SKILL.md
.claude/: settings.local.json
.github/agents/: ai_review.agent.md  linter_review.agent.md
.github/prompts/: review_before_pr.prompt.md  select_review.prompt.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/ai/: openai_adapter.py  protocol.py
backend/app/models/: __init__.py  message.py  models.py  thread.py
backend/app/repositories/: message_repository.py  thread_repository.py
backend/app/routers/: threads.py
backend/app/schemas/: base.py  message.py  thread.py
backend/app/services/: message_service.py  openai_service.py  thread_service.py
backend/app/types/: message.py
backend/tests/: conftest.py
backend/tests/repositories/: test_message_repository.py  test_thread_repository.py
backend/tests/routers/: test_threads.py
backend/tests/services/: fake_ai.py  test_message_service.py  test_thread_service.py
docs/: coverage-guide.md  testing-guide.md  vscode-launch-json-guide.md
docs/review/: review_output_format.md  review_point.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  messages.ts  threads.ts
frontend/src/test/: setup.ts  (+1 more)
(+21 files in other folders)
